--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "productName": "Electron",
   "main": "src/main.js",
   "scripts": {
-    "install": "node_modules/.bin/electron-rebuild&&node_modules/.bin/electron-packager . KeyCastJs --platform=darwin --arch=x64 --version=0.35.4"
+    "install": "./node_modules/.bin/electron-rebuild -w ref ffi nodobjc nslog && ./node_modules/.bin/electron-packager . KeyCastJs --platform=darwin --arch=x64 --version=0.35.4"
   },
   "dependencies": {
     "ffi": "node-ffi/node-ffi#gh-241",
