--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "keycastjs",
-  "productName": "KeyCast.js",
+  "productName": "KeyCastJs",
   "main": "src/main.js",
   "scripts": {
-    "install": "./node_modules/.bin/electron-rebuild -w ref && ./node_modules/.bin/electron-rebuild -w ffi && ./node_modules/.bin/electron-packager . KeyCastJs --platform=darwin --arch=x64 --version=1.0.2"
+    "install": "electron-rebuild -w ref && electron-rebuild -w ffi && electron-packager . --platform=darwin --arch=x64 --version=1.3.5 --asar"
   },
   "dependencies": {
     "ffi": "node-ffi/node-ffi#gh-241",
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "electron-packager": "^7.0.3",
-    "electron-prebuilt": "~1.3.4",
+    "electron-prebuilt": "~1.3.5",
     "electron-rebuild": "^1.0.2"
   }
 }
